--- a/STM32F439ZI_FreeRTOS_TCP_CLI.ioc
+++ b/STM32F439ZI_FreeRTOS_TCP_CLI.ioc
@@ -12,9 +12,10 @@ Mcu.IP1=RCC
 Mcu.IP2=RNG
 Mcu.IP3=SYS
 Mcu.IP4=TIM7
-Mcu.IP5=USART3
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP5=TIM10
+Mcu.IP6=USART3
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F439Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -42,13 +43,14 @@ Mcu.Pin28=VP_RNG_VS_RNG
 Mcu.Pin29=VP_SYS_VS_tim6
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin30=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=31
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F439ZITx
@@ -64,6 +66,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:true\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TIM7_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
@@ -214,7 +217,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_RNG_Init-RNG-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_RNG_Init-RNG-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -282,9 +285,12 @@ RCC.VcooutputI2SQ=192000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM10.IPParameters=Prescaler,Period
+TIM10.Period=40000 - 1
+TIM10.Prescaler=144 - 1
 TIM7.IPParameters=Prescaler,Period
-TIM7.Period=100 - 1
-TIM7.Prescaler=72 - 1
+TIM7.Period=40000 - 1
+TIM7.Prescaler=144 - 1
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -293,6 +299,8 @@ VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-F439ZI
