--- a/STM32F439ZI_FreeRTOS_TCP_CLI.ioc
+++ b/STM32F439ZI_FreeRTOS_TCP_CLI.ioc
@@ -209,10 +209,13 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=STM32F439ZI_FreeRTOS_TCP_CLI.ioc
 ProjectManager.ProjectName=STM32F439ZI_FreeRTOS_TCP_CLI
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_RNG_Init-RNG-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
